--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <img class="logo" src="img/logo.png" alt="logo neori">
             <nav>
                 <ul>
-                    <li>FEATURES</li>
-                    <li>EDITORIALS</li>
-                    <li>ENVIRONMENT</li>
-                    <li>BLOG</li>
-                    <li>SHOP</li>
-                    <li>CONTACT</li>
+                    <li> <a href="">FEATURES</a></li>
+                    <li> <a href="">EDITORIALS</a></li>
+                    <li> <a href="">ENVIRONMENT</a></li>
+                    <li> <a href="">BLOG</a></li>
+                    <li> <a href="">SHOP</a></li>
+                    <li> <a href="">CONTACT</a></li>
                 </ul>
             </nav>
         </header>
