aggiunta logo menù e big box

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
                 </ul>
             </nav>
         </header>
-        <div class="big-box"></div>
+        <div class="big-box">
+            <div class="titoli">
+                <h1 class="titolo bianco"><b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </b></h1>
+                <div class="small bianco">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aperiam facere debitis rem evenie</div>
+            </div>
+        </div>
         <!--box con float-->
         <div class="big-box2">
             <div class="up"></div>
