--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body>
       <!--pagina-->
@@ -15,33 +18,51 @@
             <img class="logo" src="img/logo.png" alt="logo neori">
             <nav>
                 <ul>
-                    <li> <a href="">FEATURES</a></li>
-                    <li> <a href="">EDITORIALS</a></li>
-                    <li> <a href="">ENVIRONMENT</a></li>
-                    <li> <a href="">BLOG</a></li>
-                    <li> <a href="">SHOP</a></li>
-                    <li> <a href="">CONTACT</a></li>
+                    <li class="font1"> <a href="">FEATURES</a></li>
+                    <li class="font1"> <a href="">EDITORIALS</a></li>
+                    <li class="font1"> <a href="">ENVIRONMENT</a></li>
+                    <li class="font1"> <a href="">BLOG</a></li>
+                    <li class="font1"> <a href="">SHOP</a></li>
+                    <li class="font1"> <a href="">CONTACT</a></li>
                 </ul>
             </nav>
         </header>
         <div class="big-box">
+            <img class="grey" src="img/THH_25121916_25131916_25126916_25136916_001.jpg" alt="">
             <div class="titoli">
-                <h1 class="titolo bianco"><b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </b></h1>
-                <div class="small bianco">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aperiam facere debitis rem evenie</div>
+                <h1 class="titolo bianco font1"><b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </b></h1>
+                <div class="small bianco font1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aperiam facere debitis rem evenie</div>
             </div>
         </div>
         <!--box con float-->
         <div class="big-box2">
-            <div class="up"></div>
+            <div class="up">
+                <h1 class="font1">Leadership</h1>
+                <h6 class="font1 gr">Ferterum urna a libero tempus</h6>
+            </div>
             <!--floats-->
             <div class="floats"> <!--classe non usata-->
-                <div class="laterale-sx"></div>
-                <div class="centrale"></div>
-                <div class="laterale-dx"></div>
+                <div class="laterale-sx">
+                        <div class="img-lats"></div>
+                        <h1 class="font1 sxf bb"> <b> Lorem </b></h1>
+                        <h6 class="font1 sxf gr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur perspiciatis veniam commodi aspernatur itaque animi esse nam quae porro reiciendis tempora rem, hic quisquam molestiae quo nisi, dolorem deleniti.</h6>  
+                </div>
+                <div class="centrale">
+                    <div class="img-cen"></div>
+                    <h1 class="font1 sxf bb"> <b> Ipsum </b></h1>
+                    <h6 class="font1 sxf gr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur perspiciatis veniam commodi aspernatur itaque animi esse nam quae porro reiciendis tempora rem, hic quisquam molestiae quo nisi, dolorem deleniti.Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur perspiciatis veniam commodi aspernatur itaque animi esse nam quae porro reiciendis tempora rem, hic quisquam molestiae quo nisi, dolorem deleniti.Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur perspiciatis veniam commodi aspernatur itaque animi esse nam quae porro reiciendis tempora rem, hic quisquam molestiae quo nisi, dolorem deleniti.</h6>  
+                </div>
+                <div class="laterale-dx">
+                    <div class="img-latd"></div>  
+                    <h1 class="font1 sxf bb"> <b> Lorem </b></h1>
+                    <h6 class="font1 sxf gr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur perspiciatis veniam commodi aspernatur itaque animi esse nam quae porro reiciendis tempora rem, hic quisquam molestiae quo nisi, dolorem deleniti.</h6>  
+                </div>
             </div>
         </div>
         <!--bottom-->
-        <div class="bottom"></div>
+        <div class="bottom">
+            <h5 class="font1 centrato">Designed with <span class="red">&hearts;</span></h5>
+        </div>
 
     </div>
 </body>
